# lln-stats

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/2016/: 2016-05-20-Karlsruhe-Ergebnisse-Lange-Laufnacht.htm
data/2017/: 2017-05-19-Karlsruhe-Ergebnisliste.htm
data/2018/: 2018-05-19-Karlsruhe-Ergebnisliste.htm
data/2019/: 4.-Lange-Laufnacht-Ergebnisse-Karlsruhe-2019.htm  5000m_mixed_gender_lookup.csv
data/2021/: 5. Lange Laufnacht _results.xml  5.-Lange-Laufnacht-Ergebnisliste-Karlsruhe-2021.htm
data/2022/: 6. Lange Laufnacht_results.xml  6.-Lange-Laufnacht-Ergebnisliste-Karlsruhe-2022.htm
data/2023/: 7.-Lange-Laufnacht-Ergebnisliste-Karlsruhe-2023.htm
data/2024/: 8.-PUMA-NITRO-Lange-Laufnacht-Ergebnisliste-Karlsruhe-2024.htm
data/2025/: 9.-PUMA-NITRO-Lange-Laufnacht-Ergebnisliste-Karlsruhe-2025.htm
data/2026/: 10.-PUMA-NITRO-Lange-Laufnacht-Ergebnisliste-Karlsruhe-2026.htm
data/extracted/: results.parquet
features/: results.csv  results.parquet
notebooks/: README.md  explore_extracted_dataset.ipynb  explore_frequent_participants.ipynb  interesting_analyses.md
src/lln_stats/: __init__.py  cli.py  extract.py  normalize.py  schema.py  years.py
src/lln_stats/extractors/: __init__.py  result_pdf.py  seltec_html.py  seltec_xml.py
tests/: test_extractors.py
