[project]
name = "lln-stats"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "html5lib>=1.1",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "pyarrow>=24.0.0",
]

[project.scripts]
lln-extract = "lln_stats.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lln_stats"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
